MCR-3722 improve support for entangled PIs